--- a/system_huellitas/views/admin/scrud_comentarios.html
+++ b/system_huellitas/views/admin/scrud_comentarios.html
@@ -94,19 +94,19 @@
                             <input type="hidden" id="idValoracion" name="idValoracion">
                             <!-- Sección para cargar información del comentario -->
                             <div class="row">
-                                <div class="col-4">
+                                <div class="col-12 col-sm-4">
                                     <div class="container d-flex align-items-center justify-content-center">
                                         <img src="../../resources/img/png/ejemplo_producto.png" id="imagen" class="tamanio_imagen_agregar" width="180px" height="180px">
                                     </div>
                                 </div>
-                                <div class="col-4">
+                                <div class="col-12 col-sm-4 pb-4">
                                     <div>
                                         <!-- Campos para nombre del producto y cliente -->
                                         <label class="fs-8 btn-orange-color fw-semibold"
                                             for="nombreProductoValoracion">
                                             Producto</label>
                                         <textarea class="form-control" id="nombreProductoValoracion" name="nombreProductoValoracion"
-                                                  rows="3" disabled></textarea>
+                                                rows="3" disabled></textarea>
                                     </div>
                                     <br>
                                     <div>
@@ -114,10 +114,10 @@
                                             for="nombreClienteValoracion">
                                             Cliente</label>
                                         <textarea class="form-control" id="nombreClienteValoracion" name="nombreClienteValoracion"
-                                                  rows="2" disabled></textarea>
+                                                rows="2" disabled></textarea>
                                     </div>
                                 </div>
-                                <div class="col-4 d-flex flex-column align-items-center justify-content-center">
+                                <div class="col-12 col-sm-4 d-flex flex-column align-items-center justify-content-center">
                                     <!-- Sección de valoración con estrellas -->
                                     <div class="row">
                                         <div class="col-4">
