--- a/system_huellitas/views/admin/scrud_pedidos.html
+++ b/system_huellitas/views/admin/scrud_pedidos.html
@@ -131,7 +131,7 @@
                         </div>
                         <!-- Botón para cerrar el modal -->
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                            aria-label="Close"></button>
+                            aria-label="Close" onclick=resetDataTable()></button>
                     </div>
                     <!-- Cuerpo del modal -->
                     <div class="modal-body mt-3">
