--- a/system_huellitas/views/admin/scrud_comentarios.html
+++ b/system_huellitas/views/admin/scrud_comentarios.html
@@ -162,7 +162,7 @@
                                     </div>
                                     <br>
                                     <!-- Botones de acción (Agregar, Ocultar) -->
-                                    <div class="container text-center">
+                                    <div class="container text-center d-flex justify-content-center mt-2">
                                         <button type="button" class="btn btn-orange-color text-white mx-2" data-bs-dismiss="modal" aria-label="Close">Regresar</button>
                                         <button type="submit" data-bs-dismiss="modal" id="btnGuardar" name="btnGuardar" class="btn btn-red-color text-white">Actualizar estado</button>
                                     </div>
